--- a/package.json
+++ b/package.json
@@ -3,15 +3,74 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^3.3.2"
+    "@element-plus/icons-vue": "^2.1.0",
+    "@wangeditor/editor": "^5.1.21",
+    "@wangeditor/editor-for-vue": "^5.1.12",
+    "axios": "^1.4.0",
+    "bootstrap-icons": "^1.9.1",
+    "core-js": "^3.8.3",
+    "dayjs": "^1.11.5",
+    "echarts": "^5.4.2",
+    "element-plus": "^2.3.4",
+    "express": "^4.18.2",
+    "jquery": "^3.6.1",
+    "moment": "^2.29.4",
+    "node-sass": "^7.0.3",
+    "style-loader": "^3.3.1",
+    "vue": "^3.2.47",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.2.0",
+    "vuedraggable": "^4.1.0",
+    "vuex": "^4.1.0",
+    "wangeditor": "^4.7.15",
+    "webpack": "^5.82.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.3.5"
-  }
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@popperjs/core": "^2.11.6",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "bootstrap": "^4.3.1",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "sass-loader": "^13.1.0",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "vue-loader": "^17.1.1",
+    "vue-template-compiler": "^2.7.14"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "@babel/eslint-parser"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ],
+  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "main": "babel.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
