--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "core-js": "^3.8.3",
     "dayjs": "^1.11.5",
     "echarts": "^5.4.2",
-    "element-plus": "^2.3.4",
+    "element-plus": "^2.3.6",
     "express": "^4.18.2",
     "jquery": "^3.6.1",
     "moment": "^2.29.4",
@@ -45,7 +45,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
-    "sass-loader": "^13.1.0",
+    "sass": "^1.63.3",
+    "sass-loader": "^13.3.2",
     "ts-loader": "^9.4.3",
     "vue-loader": "^17.1.1",
     "vue-template-compiler": "^2.7.14"
