--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
     "ts-loader": "^9.4.3",
-    "vue-loader": "^17.1.1",
-    "vue-template-compiler": "^2.7.14"
+    "vue-loader": "^17.1.1"
   },
   "eslintConfig": {
     "root": true,
